Apply rule "Prefer new String(InputStream.readAllBytes(), Charset)"