@@ -101,7 +101,7 @@ public class JouYouKanJiListFactoryBean implements FactoryBean<List<String>> {
 			try (final InputStream is = InputStreamSourceUtil.getInputStream(resource)) {
 				//
 				final String string = testAndApply(Objects::nonNull, is,
-						x -> IOUtils.toString(x, StandardCharsets.UTF_8), null);
+						x -> new String(x != null ? x.readAllBytes() : null, StandardCharsets.UTF_8), null);
 				//
 				if (string != null) {
 					//
