@@ -443,7 +443,8 @@ public class VoiceManagerOjadAccentPanel extends JPanel implements InitializingB
 					URIBuilderUtil.build(new URIBuilder(Util.toString(tsb)).setPath("ojad/search/index/word:")))),
 					null)) {
 				//
-				html = testAndApply(Objects::nonNull, is, x -> IOUtils.toString(x, StandardCharsets.UTF_8), null);
+				html = testAndApply(Objects::nonNull, is,
+						x -> new String(x != null ? x.readAllBytes() : null, StandardCharsets.UTF_8), null);
 				//
 			} // try
 				//
@@ -1588,7 +1589,8 @@ public class VoiceManagerOjadAccentPanel extends JPanel implements InitializingB
 		try (final InputStream is = testAndGet(!isTestMode(),
 				() -> Util.openStream(Util.toURL(new URI(Util.toString(Util.getKey(entry))))), null)) {
 			//
-			html = testAndApply(Objects::nonNull, is, x -> IOUtils.toString(x, StandardCharsets.UTF_8), null);
+			html = testAndApply(Objects::nonNull, is,
+					x -> new String(x != null ? x.readAllBytes() : null, StandardCharsets.UTF_8), null);
 			//
 		} // try
 			//
@@ -2890,7 +2892,7 @@ public class VoiceManagerOjadAccentPanel extends JPanel implements InitializingB
 				//
 				try (final InputStream is = Util.openStream(Util.toURL(new URI(url)))) {
 					//
-					html = IOUtils.toString(is, StandardCharsets.UTF_8);
+					html = new String(is != null ? is.readAllBytes() : null, StandardCharsets.UTF_8);
 					//
 				} // try
 					//
