@@ -616,7 +616,7 @@ class JapanDictGuiTest {
 			try (final InputStream is = getInputStream(start(new ProcessBuilder(new String[] { "which", "nmcli" })))) {
 				//
 				nmcliExists = Util.exists(testAndApply(Objects::nonNull,
-						StringUtils.trim(IOUtils.toString(is, charset)), File::new, null));
+						StringUtils.trim(new String(is != null ? is.readAllBytes() : null, charset)), File::new, null));
 				//
 			} // try
 				//
